[Fix]: Mobile Navbar cutting off while scrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -144,3 +144,9 @@
     
   }
 }
+.leaflet-container {
+  z-index: 0;
+}
+.leaflet-control-container {
+  z-index: 0;
+}
